got api working on back end to fetch some blog posts

--- a/back-end/config/config.json
+++ b/back-end/config/config.json
@@ -1,8 +1,6 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
+    "storage": "carver_codes.db",
     "dialect": "sqlite"
   },
   "test": {
