GOT POSTGRE WORKINGgit add .!

--- a/back-end/config/config.json
+++ b/back-end/config/config.json
@@ -1,7 +1,10 @@
 {
   "development": {
-    "storage": "carver_codes.db",
-    "dialect": "sqlite"
+    "username": "postgres",
+    "password": "root",
+    "database": "carver_codes",
+    "host": "127.0.0.1",
+    "dialect": "postgres"
   },
   "test": {
     "username": "root",
@@ -11,10 +14,13 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+  "use_env_variable": "DATABASE_URL",
+  "dialect": "postgres",
+  "dialectOptions": {
+    "ssl": {
+      "require": true,
+      "rejectUnauthorized": false
+    }
   }
+}
 }
