--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^8.0.0",
+    "react-paginate": "^8.1.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "three": "^0.137.5",
